lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__encode_tool_round_trip.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
{
  "model": "test-model",
  "messages": [
    {
      "role": "user",
      "content": "Find foo and read /tmp/x"
    },
    {
      "role": "assistant",
      "content": "Let me check.",
      "tool_calls": [
        {
          "id": "call_1",
          "type": "function",
          "function": {
            "name": "search",
            "arguments": "{\"query\":\"foo\"}"
          }
        },
        {
          "id": "call_2",
          "type": "function",
          "function": {
            "name": "read_file",
            "arguments": "{\"path\":\"/tmp/x\"}"
          }
        }
      ]
    },
    {
      "role": "tool",
      "content": "{\"matches\":2}",
      "tool_call_id": "call_1"
    },
    {
      "role": "tool",
      "content": "file not found",
      "tool_call_id": "call_2"
    }
  ],
  "max_tokens": 128,
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "search",
        "description": "Search files",
        "parameters": {
          "type": "object",
          "properties": {
            "query": {
              "type": "string"
            }
          },
          "required": [
            "query"
          ]
        }
      }
    },
    {
      "type": "function",
      "function": {
        "name": "read_file",
        "description": "Read a file by path",
        "parameters": {
          "type": "object",
          "properties": {
            "path": {
              "type": "string"
            }
          }
        }
      }
    }
  ]
}
